#Add two endpoints to get the books